==> win2021/npm1300_nrf5_sdk/npm1300_lib/npm1300_charger.c <==
#define DT_DRV_COMPAT nordic_npm1300_charger
#include <math.h>
#include "nrf_drv_twi.h"
#include "sensor.h"
#include "linear_range.h"
#include "util.h"
#define EDQUOT 132
#define ESTALE 133
#define ENOTSUP 134		/* Not supported */
#define NPM1300_ADDR             0x6B  //   (0x6BU >> 1)
#define ARDUINO_SCL_PIN             27    // SCL signal pin
#define ARDUINO_SDA_PIN             26    // SDA signal pin
#define CHGR_BASE 0x03U
#define ADC_BASE  0x05U
#define VBUS_BASE 0x02U
#define CHGR_OFFSET_EN_SET	0x04U
#define CHGR_OFFSET_EN_CLR	0x05U
#define CHGR_OFFSET_ISET	0x08U
#define CHGR_OFFSET_ISET_DISCHG 0x0AU
#define CHGR_OFFSET_VTERM	0x0CU
#define CHGR_OFFSET_VTERM_R	0x0DU
#define CHGR_OFFSET_CHG_STAT	0x34U
#define CHGR_OFFSET_ERR_REASON	0x36U
#define ADC_OFFSET_TASK_VBAT 0x00U
#define ADC_OFFSET_TASK_TEMP 0x01U
#define ADC_OFFSET_CONFIG    0x09U
#define ADC_OFFSET_NTCR_SEL  0x0AU
#define ADC_OFFSET_RESULTS   0x10U
#define ADC_OFFSET_IBAT_EN   0x24U
#define VBUS_OFFSET_TASK_UPDATE 0x00U
#define VBUS_OFFSET_ILIM	0x01U
#define VBUS_OFFSET_STATUS	0x07U
#define IBAT_STAT_DISCHARGE	 0x04U
#define IBAT_STAT_CHARGE_TRICKLE 0x0CU
#define IBAT_STAT_CHARGE_COOL	 0x0DU
#define IBAT_STAT_CHARGE_NORMAL	 0x0FU
#define ADC_MSB_SHIFT	   2U
#define ADC_LSB_MASK	   0x03U
#define ADC_LSB_VBAT_SHIFT 0U
#define ADC_LSB_NTC_SHIFT  2U
#define ADC_LSB_IBAT_SHIFT 4U

static ret_code_t reg_read_burst(uint8_t base, uint8_t offset, void *data, size_t len)
{
    ret_code_t ret;
    uint8_t buffer[]={base, offset};
    do
    {
       m_xfer_done = false;
       ret = nrfx_twi_tx(&m_twi, NPM1300_ADDR, buffer,sizeof(buffer), true);
         //if (NRF_SUCCESS != ret)
         //{
         //    break;
         //}
        while (m_xfer_done == false);
       m_xfer_done = false;
       ret = nrfx_twi_rx(&m_twi, NPM1300_ADDR, data, len);
       while (m_xfer_done == false);
    }while (0);

    return ret;
}

static ret_code_t reg_write(uint8_t base, uint8_t offset, uint8_t data)
{  
    ret_code_t ret;
    uint8_t buffer[] = {base, offset, data};
    m_xfer_done = false;
    ret = nrfx_twi_tx(&m_twi, NPM1300_ADDR, buffer, sizeof(buffer), false);
    APP_ERROR_CHECK(ret);
    while (m_xfer_done == false);
   // for(int i=0; i<100000;i++);
    return ret;
}

static ret_code_t reg_write2(uint8_t base, uint8_t offset, uint8_t data1,uint8_t data2)
{
    ret_code_t ret;
    uint8_t buffer[] = {base, offset, data1, data2};
    m_xfer_done = false;
    ret = nrfx_twi_tx(&m_twi, NPM1300_ADDR, buffer, sizeof(buffer), false);
    APP_ERROR_CHECK(ret);
    while (m_xfer_done == false);
    return ret;
}

int npm1300_charger_init(void)
{
  uint8_t results = 0;
  uint8_t res_buf[11] = {0};
  int ret;
  //w 08 0c,r 00
   ret = reg_read_burst(0x08, 0x0c, &results, sizeof(results));
   if (ret != 0) {
      return ret;
  }
  //w 08 05 00
  ret = reg_write(0x08, 0x05, 0x00);
  if (ret != 0) {
    return ret;
  }
  //w 04 0A 17
  ret = reg_write(0x04, 0x0A, 0x17);
  if (ret != 0) {
    return ret;
  }
  //w 04 0f,r 02
   ret = reg_read_burst(0x04, 0x0f, &results, sizeof(results));
   if (ret != 0) {
      return ret;
  }
   //w 04 0F 02
  ret = reg_write(0x04, 0x0F, 0x02);
  if (ret != 0) {
    return ret;
  }
 
   ret = reg_read_burst(0x04, 0x0F, &results, sizeof(results));
   if (ret != 0) {
      return ret;
  }

    //w 04 0A,r 17
   ret = reg_read_burst(0x04, 0x0A, &results, sizeof(results));
   if (ret != 0) {
      return ret;
  }

     //w 04 0B 0F
  ret = reg_write(0x04, 0x0B, 0x0F);
  if (ret != 0) {
    return ret;
  }

   //w 04 0C,r 90
   ret = reg_read_burst(0x04, 0x0C, &results, sizeof(results));
   if (ret != 0) {
      return ret;
  }

  ret = reg_write(0x04, 0x0C, 0x90);
  if (ret != 0) {
    return ret;
  }

   ret = reg_read_burst(0x04, 0x0D, &results, sizeof(results));
   if (ret != 0) {
      return ret;
  }

   ret = reg_write(0x04, 0x0D, 0x18);
  if (ret != 0) {
    return ret;
  }

  ret = reg_read_burst(0x04, 0x0E, &results, sizeof(results));
   if (ret != 0) {
      return ret;
  }

     ret = reg_write(0x04, 0x0D, 0x98);
  if (ret != 0) {
    return ret;
  }

   ret = reg_read_burst(0x04, 0x0F, &results, sizeof(results));
   if (ret != 0) {
      return ret;
  }
  ret = reg_read_burst(0x04, 0x10, &results, sizeof(results));
   if (ret != 0) {
      return ret;
  }

     ret = reg_write(0x05, 0x0A, 0x01);
  if (ret != 0) {
    return ret;
  }
      ret = reg_write(0x03, 0x0C, 0x07);
  if (ret != 0) {
    return ret;
  }
      ret = reg_write(0x03, 0x0d, 0x04);
  if (ret != 0) {
    return ret;
  }

      ret = reg_write2(0x03, 0x08, 0x25,0x00);
  if (ret != 0) {
    return ret;
  }

        ret = reg_write2(0x03, 0x0A, 0x9A,0x01);
  if (ret != 0) {
    return ret;
  }

        ret = reg_write(0x02, 0x01, 0x05);
  if (ret != 0) {
    return ret;
  }

   ret = reg_write(0x05, 0x24, 0x01);
  if (ret != 0) {
    return ret;
  }
   ret = reg_write(0x05, 0x00, 0x01);
  if (ret != 0) {
    return ret;
  }
   ret = reg_write(0x05, 0x01, 0x01);
  if (ret != 0) {
    return ret;
  }
   ret = reg_write(0x03, 0x04, 0x01);
  if (ret != 0) {
    return ret;
  }

   ret = reg_read_burst(0x03, 0x34, &results, sizeof(results));
   if (ret != 0) {
      return ret;
  }
  ret = reg_read_burst(0x03, 0x36, &results, sizeof(results));
   if (ret != 0) {
      return ret;
  }

  ret = reg_read_burst(0x05, 0x10, &res_buf, sizeof(res_buf));
   if (ret != 0) {
      return ret;
  }
    ret = reg_write(0x05, 0x01, 0x01);
  if (ret != 0) {
    return ret;
  }
  ret = reg_write(0x05, 0x00, 0x01);
  if (ret != 0) {
    return ret;
  }
   ret = reg_read_burst(0x02, 0x07, &results, sizeof(results));
   if (ret != 0) {
      return ret;
  }

    ret = reg_write(0x02, 0x00, 0x01);
  if (ret != 0) {
    return ret;
  }

}

int npm1300_charger_init(void)
{
	struct npm1300_charger_config *config = NULL;
        config->term_microvolt = 0x3f52f0;
        config->term_warm_microvolt = 0x3d0900; 
        config->current_microamp = 0x249f0;
        config->dischg_limit_microamp = 0xf4240;
        config->vbus_limit_microamp = 0x7a120;

	uint16_t idx;
	int ret;

	/* Configure thermistor */
	ret = reg_write(ADC_BASE, ADC_OFFSET_NTCR_SEL, config->thermistor_idx + 1U);
	if (ret != 0) {
		return ret;
	}

	/* Configure termination voltages */
	//ret = linear_range_group_get_win_index(charger_volt_ranges, ARRAY_SIZE(charger_volt_ranges),
	//				       config->term_microvolt, config->term_microvolt,
	//				       &idx);
	//if (ret != 0) {
	//	return ret;
	//}
        idx = 4; // Configure termination voltages setting to 4V
	ret = reg_write(CHGR_BASE, CHGR_OFFSET_VTERM, idx);
	if (ret != 0) {
		return ret;
	}

	//ret = linear_range_group_get_win_index(charger_volt_ranges, ARRAY_SIZE(charger_volt_ranges),
	//				       config->term_warm_microvolt,
	//				       config->term_warm_microvolt, &idx);
	//if (ret != 0) {
	//	return ret;
	//}

        idx = 6; //Battery Charger Termination Voltage Warm temp setting to 4.1V

	ret = reg_write(CHGR_BASE, CHGR_OFFSET_VTERM_R, idx);
	if (ret != 0) {
		return ret;
	}

	/* Set current, allow rounding down to closest value */
	//ret = linear_range_get_win_index(&charger_current_range,
	//				 config->current_microamp - charger_current_range.step,
	//				 config->current_microamp, &idx);
	//if (ret != 0) {
	//	return ret;
	//}

        idx = 0x08;  // 32mA

	ret = reg_write2(CHGR_BASE, CHGR_OFFSET_ISET, idx / 2U, idx & 1U);
	if (ret != 0) {
		return ret;
	}

	/* Set discharge limit, allow rounding down to closest value */
	//ret = linear_range_get_win_index(&discharge_limit_range,
	//				 config->dischg_limit_microamp - discharge_limit_range.step,
	//				 config->dischg_limit_microamp, &idx);
	//if (ret != 0) {
	//	return ret;
	//}

        idx = 0xCF;  // 1A
	ret = reg_write2(CHGR_BASE, CHGR_OFFSET_ISET_DISCHG, idx / 2U, idx & 1U);
	if (ret != 0) {
		return ret;
	}

	///* Configure vbus current limit */
	//ret = linear_range_group_get_win_index(vbus_current_ranges, ARRAY_SIZE(vbus_current_ranges),
	//				       config->vbus_limit_microamp,
	//				       config->vbus_limit_microamp, &idx);
	//if (ret != 0) {
	//	return ret;
	//}
        idx = 0;//  500mA
	ret = reg_write(VBUS_BASE, VBUS_OFFSET_ILIM, idx);
	if (ret != 0) {
		return ret;
	}

	/* Enable current measurement */
	ret = reg_write(ADC_BASE, ADC_OFFSET_IBAT_EN, 1U);
	if (ret != 0) {
		return ret;
	}

	/* Trigger current and voltage measurement */
	ret = reg_write(ADC_BASE, ADC_OFFSET_TASK_VBAT, 1U);
	if (ret != 0) {
		return ret;
	}

	/* Trigger temperature measurement */
	ret = reg_write(ADC_BASE, ADC_OFFSET_TASK_TEMP, 1U);
	if (ret != 0) {
		return ret;
	}

	/* Enable charging if configured */
	if (config->charging_enable) {
		ret = reg_write(CHGR_BASE, CHGR_OFFSET_EN_SET, 1U);
		if (ret != 0) {
			return ret;
		}
	}

	return 0;
}
